# jagua-rs

./: .gitignore  Cargo.toml
assets/: christmas_trees.json
christmas-packing/: Cargo.toml  model.lp
christmas-packing/src/: edge_clique_cover.rs  gurobi_model.rs  gurobi_model_nfp.rs  lib.rs  main.rs  ncnfp.rs  tree.rs
jagua-rs/src/entities/: layout.rs
jagua-rs/src/io/: ext_repr.rs
jagua-rs/src/probs/: mod.rs
jagua-rs/src/probs/bpp/entities/: problem.rs
jagua-rs/src/probs/qpp/entities/: instance.rs  mod.rs  problem.rs  solution.rs  square.rs
jagua-rs/src/probs/qpp/io/: export.rs  ext_repr.rs  import.rs
jagua-rs/src/probs/qpp/util/: assertions.rs
jagua-rs/src/probs/spp/entities/: problem.rs
lbf/src/: main.rs
lbf/src/io/: cli.rs  mod.rs  output.rs
lbf/src/opt/: lbf_qpp.rs  mod.rs
sparrow/: Cargo.toml
sparrow/src/: bench.rs  config.rs  main.rs
sparrow/src/optimizer/: compress.rs  explore.rs  lbf.rs  mod.rs  separator.rs  worker.rs
sparrow/src/quantify/simd/: overlap_proxy_simd.rs
sparrow/src/util/: io.rs  listener.rs  svg_exporter.rs
